--- a/pages/mention_legales.html
+++ b/pages/mention_legales.html
@@ -17,8 +17,8 @@
 </article>
 
 <footer>
-    <a href="../pages/mention_legales.html" class="foot__text">Mentions légales</a>
-    <a href="mailto:contact@ohmyfood.com" class="foot__text">Contactez nous</a>
+    <a href="..pages/mention_legales.html" >Mentions légales</a>
+    <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
 </footer>
 
 
