--- a/pages/menu_le_chic_a_la_francaise.html
+++ b/pages/menu_le_chic_a_la_francaise.html
@@ -60,8 +60,8 @@
         </section>
     </main>
     <footer>
-        <a href="../pages/mention_legales.html" class="foot__text">Mentions légales</a>
-        <a href="mailto:contact@ohmyfood.com" class="foot__text">Contactez nous</a>
+        <a href="..pages/mention_legales.html" >Mentions légales</a>
+        <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
     </footer>
 </body>
 </html>
