--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
 
 </main>
 
+<aside>
+    <H2>Prochainement</H2>
+</aside>
+
 <footer>
-    <a href="..pages/mention_legales.html" >Mentions légales</a>
+    <a href="./pages/mention_legales.html" >Mentions légales</a>
     <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
 </footer>
 
