--- a/pages/menu_le_delice_des_papilles.html
+++ b/pages/menu_le_delice_des_papilles.html
@@ -8,60 +8,63 @@
 </head>
 
 <body>
-    <header class="head">
+    <header>
       <h1><a href="../index.html">Ohmyfood</a></h1>
     </header>
 
-
     <main>
+      <h2>Le délice des papilles</h2>
 
       <section>
-        <h2>Le délice des papilles</h2>
-      </section>
-      <section>
-        <h2>Le délice des papilles</h2>
-
-        <div>
+        <article>
           <h3>Pour bien commencer</h3>
-        </div>
-        <ul>
-          <li>Tartare de thon assaisoné au yuzu</li>
-          <li>55€</li>
-          <li>Bouchée de homard croustillant et sa farandole de petits légumes</li>
-          <li>89€</li>
-          <li>Velouté de cèpes au truffes</li>
-          <li>56€</li>
-        </ul>
+          <ul>
+            <li><p>Tartare de thon assaisoné au yuzu</p>
+                <p>55€</p>
+            </li>
+            <li><p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                <p>89€</p>
+            </li>
+            <li><p>Velouté de cèpes au truffes</li>
+                <p>56€</p>
+            </li>
+          </ul>
+        </article>
 
-        <div>
+        <article>
           <h3>Pour bien continuer</h3>
-        </div>
-        <ul>
-          <li class="plat">Poulet rôti au herbes de provence et sa crème de truffe</li>
-          <li class="price">110€</li>
-          <li class="plat">Langouste rôtie et ses légumes de saison</li>
-          <li class="price">225€</li>
-          <li class="plat">Côte de boeuf Angus et sa purée de panais</li>
-          <li class="price">115€</li>
-        </ul>
-
-        <div>
-          <h3/h3>
-        </div>
-
-        <ul>
-          <li>Farandole de desserts du chef</li>
-          <li>55€</li>
-          <li>Crème brulée revisité</li>
-          <li>60€</li>
-          <li>Tiramisu à la noisette</li>
-          <li>55€</li>
-        </ul>
+          <ul>
+            <li><p>Poulet rôti au herbes de provence et sa crème de truffe</p>
+                <p>110€</p>
+            </li>
+            <li><p>Langouste rôtie et ses légumes de saison</p>
+                <p>225€</p>
+            </li>
+            <li><p>Côte de boeuf Angus et sa purée de panais</p>
+                <p>115€</p>
+            </li>
+          </ul>
+        </article>
+      
+      <article>
+          <h3>Pour bien terminer</h3>h3>
+          <ul>
+            <li><p>Farandole de desserts du chef</p>
+                <p>55€</p>
+            </li>
+            <li><p>Crème brulée revisité</p>
+                <p>60€</p>
+            </li>
+            <li><p>Tiramisu à la noisette</p>
+                <p>55€</p>
+            </li>
+          </ul>
+        </article>
       </section>
     </main>
 
     <footer>
-      <a href="..pages/mention_legales.html" >Mentions légales</a>
+      <a href="../pages/mention_legales.html" >Mentions légales</a>
       <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
   </footer>
   </body>
