--- a/pages/menu_la_palette_du_gout.html
+++ b/pages/menu_la_palette_du_gout.html
@@ -6,59 +6,66 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <title>Ohmyfood Menu La palette du goût</title>
 </head>
+
 <body>
     <header>
         <h1><a href="../index.html" >Ohmyfood</a></h1>
     </header>
 
-    <main>
-    <section>
-            <h2>La palette du goût</h2>
-            <h2>La palette du goût</h2>
+    <main> 
+        <h2>La palette du goût</h2>
 
-            <div>
+        <section>
+            <article>
                 <h3>Esquisses</h3>
-            </div>
+                <ul>
+                    <li><p>Fricassée d'escargot au piment d'espelette</p>
+                        <p>60€</p>
+                    </li>
+                    <li><p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
+                        <p>55€</p>
+                    </li>
+                    <li><p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                        <p>65€</p>
+                    </li>
+                </ul>
+            </article>
 
-            <ul>
-                <li>Fricassée d'escargot au piment d'espelette</li>
-                <li>60€</li>
-                <li>Oeuf au plat assaisonné à la truffe sur lit de caviar</li>
-                <li>55€</li>
-                <li>Foie gras de canard mi-cuit et ses copeaux de truffe noire</li>
-                <li>65€</li>
-            </ul>
+            <article>
+                <h3>Oeuvres de maître</h3>
+                <ul>
+                    <li><p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
+                        <p>70€</p>
+                    </li>
+                    <li><p></p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                        <p>85€</p>
+                    </li>
+                    <li><p>Filet de turbo aux agrumes</p>
+                        <p>125€</p>
+                    </li>
+                </ul>
+            </article>
 
-            <div>
-            <h3>Oeuvres de maître</h3>
-            </div>
+            <article>
+                    <h3>Au sommet de l'art</h3>
 
-            <ul>
-                <li>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</li>
-                <li>70€</li>
-                <li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</li>
-                <li>85€</li>
-                <li>Filet de turbo aux agrumes</li>
-                <li>125€</li>
-            </ul>
-
-            <div>
-                <h3>Au sommet de l'art</h3>
-            </div>
-
-            <ul>
-                <li>Paris-Brest revisité</li>
-                <li>65€</li>
-                <li>Macaron au chocolat d'exception et glace à la vanille de Madagascar</li>
-                <li>55€</li>
-                <li>Mousse au chocolat au piment d'espelette et à la truffe noire</li>
-                <li>60€</li>
-            </ul>
+                <ul>
+                    <li><p>Paris-Brest revisité</p>
+                        <p>65€</p>
+                    </li>
+                    <li><p>Macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
+                        <p>55€</p>
+                    </li>
+                    <li>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                    <p>60€</p>
+                    </li>
+                </ul>
+            </article>
         </section>
     </main>
 
     <footer>
-        <a href="..pages/mention_legales.html" >Mentions légales</a>
+        <a href="../pages/mention_legales.html" >Mentions légales</a>
         <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
     </footer>
 </body>
