--- a/pages/menu_le_chic_a_la_francaise.html
+++ b/pages/menu_le_chic_a_la_francaise.html
@@ -8,59 +8,62 @@
 </head>
 
 <body>
-<header>
-    <h1><a href="../index.html">Ohmyfood</a></h1>
-</header>
+    <header>
+        <h1><a href="../index.html">Ohmyfood</a></h1>
+    </header>
 
     <main>
-
+        <h2>Le chic à la française</h2>
+        
         <section>
-            <h2>Le chic à la française</h2>
-        </section>
-        <section>
-
-            <h2>Le chic à la française</h2>
-
-            <div>
+            <article>
                 <h3>Pour se mettre en appétit</h3>
-            </div>
-
-            <ul>
-                <li>Tartare de poulpes acidulés au zestes d'orange</li>
-                <li>79€</li>
-                <li>Veloutés de légumes d'antan</li>
-                <li>57€</li>
-                <li>Soupe à l'oignon revisitée</li>
-                <li>57€</li>
-            </ul>
-
-            <div>
+                <ul>
+                    <li><p>Tartare de poulpes acidulés au zestes d'orange</p>
+                        <p>79€</p>
+                    </li>
+                    <li><p>Veloutés de légumes d'antan</p>
+                        <p>57€</p>
+                    </li>
+                    <li><p>Soupe à l'oignon revisitée</p>
+                        <p>57€</p>
+                    </li>
+                </ul>
+            </article>
+            
+            <article>
                 <h3>Plaisir des papilles</h3>
-            </div>
+                <ul>
+                    <li><p>Coquille Saint-Jacques accompagnée d'une purée de panais</p>
+                        <p>95€</p>
+                    </li>
+                    <li><p></p>Magret de canard et parmentier de pommes de terres</p>
+                        <p>88€</p>
+                    </li>
+                    <li><p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
+                        <p>175€</p>
+                    </li>
+                </ul>
+            </article>
 
-            <ul>
-                <li></li>Coquille Saint-Jacques accompagnée d'une purée de panais</li>
-                <li>95€</li>
-                <li>Magret de canard et parmentier de pommes de terres</li>
-                <li>88€</li>
-                <li>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</li>
-                <li>175€</li>
-            </ul>
-            <div</div>
+            <article></article>
                 <h3>Gourmandises sucrées</h3>
-            </div>
-            <ul>
-                <li>Pétales de violettes glacés et purée de noisettes</li>
-                <li>38€</li>
-                <li>Fondant au chocolat revisité</li>
-                <li>29€</li>
-                <li>Millefeuille croustillant</li>
-                <li>41€</li>
-            </ul>
+                <ul>
+                    <li><p>Pétales de violettes glacés et purée de noisettes</p>
+                        <p>38€</p>
+                    </li>
+                    <li><p>Fondant au chocolat revisité</p>
+                        <p>29€</p>
+                    </li>
+                    <li><p>Millefeuille croustillant</p>
+                        <p>41€</p>
+                    </li>
+                </ul>
+            </article>
         </section>
     </main>
     <footer>
-        <a href="..pages/mention_legales.html" >Mentions légales</a>
+        <a href="../pages/mention_legales.html" >Mentions légales</a>
         <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
     </footer>
 </body>
