--- a/index.html
+++ b/index.html
@@ -1,59 +1,57 @@
 <html lang="fr">
-	<!doctype html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <title>Ohmyfood Accueil</title>
-</head>
+    <!doctype html>
+    
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
+        <title>Ohmyfood Accueil</title>
+    </head>
 
-<body>
-<header>
-    <h1><a href="index.html" >Ohmyfood</a></h1>
-</header>
+    <body>
+    <header>
+        <h1><a href="index.html" >Ohmyfood</a></h1>
+    </header>
 
-<main>
-    <nav class="menublock"></nav>
-        <section class="menu"></section>
-            <a href="./pages/menu_la_note_enchantee.html">
-                <h3>La note enchantée</h3>
-                <h2>Menu</h2>
-            </a>
-            </div>
-        </section>
+    <main>
+        <div class="menublock">
+            <section class="one">
+                <a href="./pages/menu_la_note_enchantee.html">
+                    <h3>La note enchantée</h3>
+                    <h2>Menu</h2>
+                </a>
+            </section>
 
-        <section class="menu">
-            <a href="./pages/menu_le_chic_a_la_francaise.html">
-                <h3>Le chic à la française</h3>
-                <h2>Menu</h2>
-            </a>
-        </section>
+            <section class="two">
+                <a href="./pages/menu_le_chic_a_la_francaise.html">
+                    <h3>Le chic à la française</h3>
+                    <h2>Menu</h2>
+                </a>
+            </section>
 
-        <section class="menu">
-            <a href="./pages/menu_le_delice_des_papilles.html">
-                <h3>Le délice des papilles</h3>
-                <h2>Menu</h2>
-            </a>
-        </section>
+            <section class="three">
+                <a href="./pages/menu_le_delice_des_papilles.html">
+                    <h3>Le délice des papilles</h3>
+                    <h2>Menu</h2>
+                </a>
+            </section>
 
-        <section class="menu">
-            <a href="./pages/menu_la_palette_du_gout.html">
-                <h3>La palette du goût</h3>
-                <h2>Menu</h2>
-            </a>
-        </section>
+            <section class="four">
+                <a href="./pages/menu_la_palette_du_gout.html">
+                    <h3>La palette du goût</h3>
+                    <h2>Menu</h2>
+                </a>
+            </section>
+        </div>
+        <aside>
+            <H2>Prochainement</H2>
+        </aside>
+    </main>
 
-</main>
+    <footer>
+        <a href="./pages/mention_legales.html" >Mentions légales</a>
+        <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
+    </footer>
 
-<aside>
-    <H2>Prochainement</H2>
-</aside>
-
-<footer>
-    <a href="./pages/mention_legales.html" >Mentions légales</a>
-    <a href="mailto:contact@ohmyfood.com" >Contactez nous</a>
-</footer>
-
-
-</body>
+    </body>
 </html>
